5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1859_2176.log
== TEST (2019-06-26 14:34:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

m = m[i] == max(mat)
print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:34:33) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

mat = mat[i] == max(mat)
print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:34:55) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

for i ina range(mat):
	mat = mat[i] == max(mat)
	print(mat)
		
-- ERROR:
File "XXXX", line 4
    for i ina range(mat):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:35:01) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

for i in a range(mat):
	mat = mat[i] == max(mat)
	print(mat)
		
-- ERROR:
File "XXXX", line 4
    for i in a range(mat):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:35:09) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

for i in a range(mat):
	mat = mat[i] == max(mat)
	print(mat)
		
-- ERROR:
File "XXXX", line 4
    for i in a range(mat):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:36:11) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

for i in range(mat):
	mat = mat[i] == max(mat) 
	print(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:53:59) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat(1, 2)
 for i in range(mat):
		if (i > j and i < j):
			if a > mat[i]:
				a = a
			elif a < mat[i]:
				a = mat[i]
print(a)
			
		
-- ERROR:
File "XXXX", line 5
    for i in range(mat):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:54:25) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat(1, 2)
for i in range(mat):
	if (i > j and i < j):
		if a > mat[i]:
			a = a
		elif a < mat[i]:
			a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:20:22) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape.mat[0]):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:22:41) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0]):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
File "XXXX", line 5
    for i in range(shape(mat[0]):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:22:56) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape.mat[0]):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:29) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape.(mat[0]):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
File "XXXX", line 5
    for i in range(shape.(mat[0]):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:34) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0]):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
File "XXXX", line 5
    for i in range(shape(mat[0]):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:44) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0])):
	for j in range(shape.mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:23:51) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0])):
	for j in range(shape(mat[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
File "XXXX", line 6
    for j in range(shape(mat[1]):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:24:04) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0])):
	for j in range(shape(mat[1])):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:25:24) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(mat:
	for j in range(shape(mat[1])):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
File "XXXX", line 5
    for i in range(mat:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:25:29) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(mat):
	for j in range(shape(mat[1])):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:25:56) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat[0])):
	for j in range(shape(mat[1])):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:27:58) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:07) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:11) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
1.58986
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
40
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Matriz: 0.89
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:20) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
2.5889
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Matriz: 98.9
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:21) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
4.86626
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Matriz: 98.9
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Matriz: 98.9
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:21) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
6.35469
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
Matriz: 40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Matriz: 0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:22) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
6.77929
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
Matriz: 0.89
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Matriz: 98.9
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:28) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
1.03842
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
40
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
98.9
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:28:29) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
2.69724
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
Matriz: 0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
Matriz: 98.9
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:35) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:46) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:58) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:29:06) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:29:21) 
-- CODE:
from numpy import*
mat = array(eval(input("Matriz: ")))

a = mat[1, 2]
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if (i != j):
			if a > mat[i,j]:
				a = a
			elif a < mat[i,j]:
				a = mat[i,j]
print(a)
			
		
-- EXECUTION TIME:
1.1423
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
98.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
